ABFL | RS9 | PR970457 | 2111 | Update case owner on case closure

--- a/force-app/main/default/classes/ABFL_Util.cls
+++ b/force-app/main/default/classes/ABFL_Util.cls
@@ -52,6 +52,7 @@ public without sharing class ABFL_Util {
             resultWrap = ASF_CaseMovementHelper.moveToForwardStage(validCaseList, requestedStageMap, currentStageMap);
             for(ASF_CaseMovementHelper.StageWrapper wrapper :resultWrap.values()) {
                 if(String.isBlank(wrapper.errorMessage)) {
+                    wrapper.caseToBeUpdated.OwnerId = UserInfo.getUserId();
                     casesToResolveList.add(wrapper.caseToBeUpdated);
                 }
             }
