ASF_CaseQueryHandler Changes

--- a/force-app/main/default/classes/ASF_CaseQueryHandler.cls
+++ b/force-app/main/default/classes/ASF_CaseQueryHandler.cls
@@ -2,8 +2,8 @@
  * @description       : 
  * @author            : rsinghnagar@salesforce.com
  * @group             : 
- * @last modified on  : 07-17-2024
- * @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
+ * @last modified on  : 05-14-2024
+ * @last modified by  : rsinghnagar@salesforce.com
 **/
 public without sharing class ASF_CaseQueryHandler {
     private static List<Case> cases = null;
