--- a/force-app/main/default/classes/ABFL_E2C_CreationRulesTest.cls
+++ b/force-app/main/default/classes/ABFL_E2C_CreationRulesTest.cls
@@ -1,3 +1,13 @@
+/**
+ * @description       : 
+ * @author            : rsinghnagar@salesforce.com
+ * @group             : 
+ * @last modified on  : 07-08-2024
+ * @last modified by  : rsinghnagar@salesforce.com
+ * Modifications Log
+ * Ver   Date         Author                       Modification
+ * 1.0   07-08-2024   rsinghnagar@salesforce.com   Initial Version
+**/
 @isTest
 public class ABFL_E2C_CreationRulesTest {
 
@@ -44,6 +54,7 @@ public class ABFL_E2C_CreationRulesTest {
             eMsg.ParentId = newCase.Id;
             eMsg.ToAddress = 'abcl.abfl@gmail.com';
             eMsg.FromAddress = 'valid.finance1@adityabirlacapital.com';
+            eMsg.Winning_Email__c = 'abcl.abfl@gmail.com';
             eMsg.Subject = 'Check Subject';
             eMsg.MessageIdentifier = 'ABC';
             eMsg.Incoming = true;
